# C-Minus

./: README.md
doc/: 实验报告.md  测试报告.md
src/C-MinusPlus/: CMakeLists.txt  C_MinusPlus  Makefile  draw.sh  main.cpp  run.sh  test.c
src/C-MinusPlus/ast/: Declarations.cpp  Declarators.cpp  Expression.cpp  Global.cpp  Identifier.cpp  NodeBase.cpp  Statement.cpp  Types.cpp  header.cpp
src/C-MinusPlus/include/: Declarations.hpp  Declarators.hpp  Expression.hpp  Global.hpp  Identifier.hpp  NodeBase.hpp  Statements.hpp  SymbolTable.hpp  Types.hpp  ast.hpp  header.hpp
src/C-MinusPlus/lexer/: lexer.l
src/C-MinusPlus/parser/: parser.output  parser.tab.c  parser.y
src/C-MinusPlus/semantic/: SymbolTable.cpp
src/C-MinusPlus/vis/: ast.dot
src/test/error/: comment.c  diff_type.c  fuck.c  funccall.c  left.c  main.c  samefunc.c  samevar.c  undefinedfunc.c  var_func_conflict.c  wrongtoken.c
src/test/test/: branch.c  calc.c  fac_prime.c  io.c  loop.c  scope.c
